# CLT_BaseModel

./: .gitignore  ARCHITECTURE.md  CITATION.cff  CLAUDE.md  TASKS.md  developer_notes.md  pyproject.toml
.claude/: settings.json
.githooks/: pre-commit
.history/generic_core/: generic_model_20260625161128.py  generic_model_20260626101926.py
clt_toolkit/: __init__.py  base_components.py  experiments.py  scenario_runner.py
flu_core/: flu_components.py  flu_outcomes.py  flu_torch_det_components.py
flu_instances/: What changed.txt
flu_instances/austin3_input_files_2023_2024/: Hosp_Austin3.xlsx  common_subpop_params.json  daily_vaccines_East.csv  daily_vaccines_Mid.csv  daily_vaccines_West.csv  init_vals_East.json  init_vals_Mid.json  init_vals_West.json  mixing_params.json  numIndiv_austin3.csv  school_work_calendar_austin_East.csv  school_work_calendar_austin_Mid.csv  school_work_calendar_austin_West.csv  simulation_settings.json
flu_instances/austin3_input_files_2024_2025/: Hosp_Austin3.xlsx  absolute_humidity_austin.csv  common_subpop_params.json  daily_vaccines_East.csv  daily_vaccines_Mid.csv  daily_vaccines_West.csv  init_vals_East.json  init_vals_Mid.json  init_vals_West.json  mixing_params.json  numIndiv_austin3.csv  school_work_calendar_austin_East.csv  school_work_calendar_austin_Mid.csv  school_work_calendar_austin_West.csv  simulation_settings.json
flu_instances/austin_generic_inputs/: initial_conditions_East.json  initial_conditions_West.json  metapop_config.json  model_config.json  school_work_calendar_East.csv  school_work_calendar_West.csv  vaccines_East.csv  vaccines_West.csv
flu_instances/austin_input_files/: What changed.txt
generic_core/: architecture.md  calibration.py  config_parser.py  contact_matrix_fetch.py  generic_metapop.py  generic_model.py  plan.md  rate_templates.py  tasks.md  torch_generic.py  travel_functions.py
tests/: test_contact_matrix_fetch.py  test_generic_scheduled_transitions.py  test_generic_torch.py  test_scenario_runner.py
(+90 files in other folders)
