[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "city_level_transmission_toolkit"
version = "0.1.0"
description = "Tools for building modular and scalable compartmental models of respiratory virus transmission in a city."
authors = [
  { name = "LP" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

# Optional extras. Install with e.g.: pip install -e ".[contact_matrices]"
# - contact_matrices: enables the in-notebook contact-matrix fetch in the model
#   builder's Population & Geography tab (generic_core/contact_matrix_fetch.py),
#   which downloads Mistry-2021 matrices via the epydemix-data repo.
[project.optional-dependencies]
contact_matrices = ["epydemix"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"tests.test_input_files" = ["*.json", "*.csv"]
